...
                                                <rect key="frame" x="0.0" y="0.0" width="75" height="34"/>
                                                <color key="backgroundColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="waterVolume"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="75" id="Jb4-KP-lmq"/>
...
                                        <rect key="frame" x="243" y="39" width="79" height="32"/>
                                        <segments>
                                            <segment title="1%"/>
                                            <segment title="2%"/>
                                        </segments>
                                        <color key="tintColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="80" height="34"/>
                                                <color key="backgroundColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                                                <accessibility key="accessibilityConfiguration" identifier="mixtureConcentration"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" constant="80" id="OVP-Zo-Igb"/>
...
                                        <rect key="frame" x="281" y="3" width="41" height="30"/>
                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="15"/>
                                        <state key="normal" title="Reset">
                                            <color key="titleColor" red="0.80000001190000003" green="1" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
...
                                        <rect key="frame" x="28" y="8" width="99" height="37.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Solution 2%" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Knb-cy-RK3">
                                                <rect key="frame" x="0.0" y="0.0" width="99" height="20.5"/>
                                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
...
                                        </subviews>
                                    </stackView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="result" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kj3-xr-4on">
                                        <rect key="frame" x="273.5" y="16.5" width="47.5" height="20.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="result"/>
...
